<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ub.pis2016.pis12.robotrun.SettingMenuActivity"
    android:background="@drawable/fondomenu"
    android:clickable="true">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backButton_SettingsActivity"
        android:background="@android:drawable/ic_menu_revert"
        android:contentDescription="@string/backButton" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backButton_SettingsActivity"
        android:layout_toRightOf="@+id/backButton_SettingsActivity"
        android:layout_toEndOf="@+id/backButton_SettingsActivity"
        android:id="@+id/linearLayout3">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idiom_SettingMenu"
                android:id="@+id/textIdioma_SettingMenu"
                android:layout_marginBottom="15dp"
                android:textColor="#FFFFFF" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/spinnerIdioma"
                android:layout_gravity="center_horizontal"
                android:entries="@array/idioms"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="15dp"
                android:background="#c8ffffff"
                android:layout_marginRight="300dp" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/music"
                android:id="@+id/checkMute"
                android:layout_gravity="center_horizontal"
                android:hint="@string/mute"
                android:textColor="#FFFFFF"
                android:checked="false"
                android:buttonTint="#FFFFFF"
                android:onClick="onCheckBoxClicked"/>


        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/informacion_SettingMenu"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout3"
        android:layout_alignEnd="@+id/linearLayout3"
        android:src="@android:drawable/ic_menu_info_details"
        android:background="@null"/>

</RelativeLayout>
