<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ub.pis2016.pis12.robotrun.WorldMenuActivity"
    android:id="@+id/layoutWorldFondo">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backButton_WorldMenu"
            android:id="@+id/backButton_WorldMenu"
            android:background="@android:drawable/ic_menu_revert"
            android:contentDescription="@string/backButton_WorldMenu" />
    </LinearLayout>


    <ViewFlipper
        android:id="@+id/ViewFlipper01"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/linearLayout2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tierra_WorldMenu"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="85dp"
                android:layout_marginRight="160dp"
                android:layout_marginLeft="160dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/worldEarth_WorldMenu"
                android:id="@+id/textTierra_WorldMenu"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textPorcentage_Tierra"
                android:layout_below="@+id/textTierra_WorldMenu"
                android:layout_centerHorizontal="true"
                android:textColor="#ffffff"
                android:autoText="true" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/luna_WorldMenu"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="85dp"
                android:layout_marginRight="150dp"
                android:layout_marginLeft="150dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/worldMoon_WorldMenu"
                android:id="@+id/textLuna_WorldMenu"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="#ffffff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textPorcentage_Luna"
                android:layout_below="@+id/textLuna_WorldMenu"
                android:layout_centerHorizontal="true"
                android:textColor="#ffffff" />
        </RelativeLayout>

    </ViewFlipper>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton_izq"
        android:background="@drawable/arrowsw"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="200dp"
        android:layout_marginRight="500dp"
        android:layout_marginBottom="50dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton_der"
        android:background="@drawable/arrows1w"
        android:layout_alignTop="@+id/imageButton_izq"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="500dp"
        android:layout_marginBottom="50dp" />
</RelativeLayout>


